--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <a href="Indian%20Cricket%20Team.html" class="button">Indian Cricket Team</a>
             <a href="chess.html" class="button">Chess</a>
             <a href="magnuscarlsen.html" class="button">Magnus Carlsen</a>
+            <a href="1983worldcup.html" class="button">Learn about the 1983 World CUP!</a>
         </div>
     </div>
 </body>
