--- a/Indian Cricket Team.html
+++ b/Indian Cricket Team.html
@@ -9,7 +9,7 @@
         body {
             background-color: #f5f5f5;
             color: #000000;
-            font-family: 'Montserrat', sans-serif;'
+            font-family: 'Montserrat', sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -26,8 +26,9 @@
         }
 
         header h1 {
-            font-size: 3rem;
+            font-size: 4rem;
             margin: 0;
+            font-weight: 700;
         }
 
         .content {
@@ -37,7 +38,20 @@
             background: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            transition: background-color 0.5s ease;
+        }
+
+        h3 {
+            font-size: 1.8rem;
+            font-weight: 700;
+            margin-top: 1.5rem;
+            color: #333;
+        }
+
+        p {
+            font-size: 1rem;
+            margin: 1rem 0;
+            color: #555;
+            font-weight: 400;
         }
 
         img {
@@ -54,11 +68,6 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
-        h3, p {
-            font-size: 1rem;
-            transition: color 0.5s ease;
-        }
-
         .footer {
             background-color: #222;
             color: #fff;
@@ -66,6 +75,36 @@
             padding: 10px;
             width: 100%;
             margin-top: 20px;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 14px 30px;
+            background: #1a73e8;
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 700;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 30px;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
+        }
+
+        .button:hover {
+            background: #0c5ece;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
