Update Indian Cricket Team.html

--- a/Indian Cricket Team.html
+++ b/Indian Cricket Team.html
@@ -141,6 +141,14 @@
         </p>
     </div>
 
+    <div class="button-container">
+        <button class="button">History of Cricket</button>
+        <button class="button">Magnus Carlsen</button>
+        <button class="button">Virat Kohli</button>
+        <button class="button">Learn about the 1983 WORLD CUP!!</button>
+        <button class="button">History Of CRICKET!!</button>
+    </div>
+
     <footer class="footer">
         &copy; 2025 Indian Cricket Team. All rights reserved.
     </footer>
