Update Indian Cricket Team.html

--- a/Indian Cricket Team.html
+++ b/Indian Cricket Team.html
@@ -142,11 +142,13 @@
     </div>
 
     <div class="button-container">
-        <button class="button">History of Cricket</button>
-        <button class="button">Magnus Carlsen</button>
-        <button class="button">Virat Kohli</button>
-        <button class="button">Learn about the 1983 WORLD CUP!!</button>
-        <button class="button">History Of CRICKET!!</button>
+      
+         <a href="viratkohli.html" class="button">Virat Kohli</a>
+            <a href="index.html" class="button">Home</a>
+            <a href="chess.html" class="button">Chess</a>
+            <a href="magnuscarlsen.html" class="button">Magnus Carlsen</a>
+            <a href="1983worldcup.html" class="button">Learn about the 1983 World CUP!</a>
+                    <a href="historyofcricket.html" class="button">History of Cricket</a>
     </div>
 
     <footer class="footer">
