--- a/1983worldcup.html
+++ b/1983worldcup.html
@@ -97,7 +97,7 @@
         <h2>Conclusion</h2>
         <p>The 1983 Cricket World Cup remains one of the greatest underdog stories in sports history. It paved the way for India's dominance in world cricket.</p>
         
-        <a href="index.htmk" class="button">Home</a>
+        <a href="index.html" class="button">Home</a>
         <a href="viratkohli.html" class="button">Virat Kohli Page</a>
     </div>
 </body>
