--- a/chess.html
+++ b/chess.html
@@ -154,6 +154,10 @@
                 title="Learn Chess: A Beginner's Guide" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
+                 src="https://www.youtube.com/watch?v=6IegDENuxU4&ab_channel=GothamChess" 
+                title="Learn & Study Chess Openings" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
             </iframe>
         </div>
 
