--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <a href="chess.html" class="button">Chess</a>
             <a href="magnuscarlsen.html" class="button">Magnus Carlsen</a>
             <a href="1983worldcup.html" class="button">Learn about the 1983 World CUP!</a>
+            <a href="historyofcricket.html" class="button">History of Cricket</a>
         </div>
     </div>
 </body>
